--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
     "redux-auth": "^0.0.5-beta5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
