--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
-    "redux-auth": "^0.0.5-beta5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "redux-token-auth": "^0.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
