--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "build-and-deploy": "npm run build && s3cmd sync build/* s3://douze-points && echo '🚀  Deployed!'"
+    "build-and-deploy": "yarn build && mv build/index.html build/200.html && surge build douze-points.com"
   }
 }
