--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "build-and-deploy": "yarn build && mv build/index.html build/200.html && surge build douze-points.com"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0"
   }
 }
